--- a/NewsModule/Classes/LoginViewController.xib
+++ b/NewsModule/Classes/LoginViewController.xib
@@ -53,7 +53,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBUIView" id="915726919">
 								<reference key="NSNextResponder" ref="810542870"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, -95}, {320, 568}}</string>
 								<reference key="NSSuperview" ref="810542870"/>
 								<reference key="NSWindow"/>
@@ -601,11 +601,10 @@
 							</object>
 							<object class="IBUIImageView" id="356992054">
 								<reference key="NSNextResponder" ref="810542870"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">266</int>
 								<string key="NSFrame">{{0, 426}, {320, 1}}</string>
 								<reference key="NSSuperview" ref="810542870"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUIImage" ref="472735351"/>
@@ -686,7 +685,7 @@
 								<reference key="IBUIFont" ref="613807874"/>
 							</object>
 						</object>
-						<string key="NSFrame">{{0, 33}, {320, 378}}</string>
+						<string key="NSFrame">{{0, 33}, {320, 427}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1023882171"/>
@@ -709,13 +708,19 @@
 						</object>
 					</object>
 				</object>
-				<string key="NSFrame">{{0, 20}, {320, 411}}</string>
+				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="556728573"/>
-				<reference key="IBUIBackgroundColor" ref="404152171"/>
+				<object class="NSColor" key="IBUIBackgroundColor">
+					<int key="NSColorSpace">1</int>
+					<bytes key="NSRGB">MSAwLjM4NDc3Mzk3MDUgMC4yNTg4NTI0NTM3AA</bytes>
+				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
+				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
+					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
+					<string key="IBUIDisplayName">Freeform</string>
+				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUILabel" id="988683081">
@@ -724,7 +729,6 @@
 				<string key="NSFrameSize">{209, 21}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClipsSubviews">YES</bool>
 				<int key="IBUIContentMode">7</int>
@@ -770,7 +774,6 @@
 				<string key="NSFrameSize">{300, 30}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<bool key="IBUIUserInteractionEnabled">NO</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<object class="NSCustomResource" key="IBUIImage">
@@ -801,7 +804,6 @@
 				<string key="NSFrameSize">{180, 22}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClipsSubviews">YES</bool>
 				<int key="IBUIContentMode">7</int>
@@ -1005,7 +1007,6 @@
 				<string key="NSFrameSize">{24, 22}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUIContentHorizontalAlignment">0</int>
@@ -1026,7 +1027,6 @@
 				<string key="NSFrameSize">{124, 21}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<reference key="IBUIBackgroundColor" ref="437796649"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -2131,7 +2131,7 @@
 				<string>{320, 480}</string>
 				<string>{300, 30}</string>
 				<string>{9, 14}</string>
-				<string>{61, 33}</string>
+				<string>{149, 31}</string>
 				<string>{308, 1}</string>
 				<string>{61, 33}</string>
 				<string>{320, 35}</string>
