--- a/RapnetModule/DiamondDesultDetailsVC.xib
+++ b/RapnetModule/DiamondDesultDetailsVC.xib
@@ -46,7 +46,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 35}, {320, 425}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1020278876"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -70,7 +69,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 35}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="856296099"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -85,7 +83,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{4, 5}, {50, 25}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="616102787"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -126,7 +123,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{231, 5}, {84, 25}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="610715952"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -150,7 +146,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{68, 7}, {182, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="108260195"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -185,7 +180,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{-8, 7}, {335, 360}}</string>
 								<reference key="NSSuperview" ref="1020278876"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="268139783"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -202,7 +196,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{69, 32}, {182, 21}}</string>
 								<reference key="NSSuperview" ref="1020278876"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="81434404"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -236,7 +229,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{69, 317}, {70, 32}}</string>
 								<reference key="NSSuperview" ref="1020278876"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="144741954"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -260,8 +252,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{183, 317}, {70, 32}}</string>
 								<reference key="NSSuperview" ref="1020278876"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="IBUIRestorationIdentifier"/>
@@ -289,7 +279,6 @@
 												<int key="NSvFlags">301</int>
 												<string key="NSFrame">{{13, 158}, {255, 56}}</string>
 												<reference key="NSSuperview" ref="1056791937"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="795311231"/>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -305,7 +294,6 @@
 												<int key="NSvFlags">301</int>
 												<string key="NSFrame">{{19, 158}, {240, 48}}</string>
 												<reference key="NSSuperview" ref="1056791937"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="282006626"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -331,7 +319,6 @@
 												<int key="NSvFlags">301</int>
 												<string key="NSFrame">{{13, 75}, {253, 56}}</string>
 												<reference key="NSSuperview" ref="1056791937"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="194512790"/>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -344,7 +331,6 @@
 												<int key="NSvFlags">301</int>
 												<string key="NSFrame">{{18, 77}, {242, 48}}</string>
 												<reference key="NSSuperview" ref="1056791937"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="46500100"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -363,7 +349,6 @@
 												<int key="NSvFlags">301</int>
 												<string key="NSFrame">{{13, 214}, {42, 25}}</string>
 												<reference key="NSSuperview" ref="1056791937"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="1055487494"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -396,7 +381,6 @@
 												<int key="NSvFlags">301</int>
 												<string key="NSFrame">{{54, 214}, {212, 25}}</string>
 												<reference key="NSSuperview" ref="1056791937"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="462509306"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -433,7 +417,6 @@
 												<int key="NSvFlags">301</int>
 												<string key="NSFrame">{{12, 233}, {255, 32}}</string>
 												<reference key="NSSuperview" ref="1056791937"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="784670315"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -458,7 +441,6 @@
 										</array>
 										<string key="NSFrameSize">{280, 265}</string>
 										<reference key="NSSuperview" ref="268139783"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="361241220"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -475,7 +457,6 @@
 										<int key="NSvFlags">301</int>
 										<string key="NSFrame">{{15, -6}, {182, 25}}</string>
 										<reference key="NSSuperview" ref="268139783"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1040514076"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -499,7 +480,6 @@
 										<int key="NSvFlags">301</int>
 										<string key="NSFrame">{{15, 15}, {251, 31}}</string>
 										<reference key="NSSuperview" ref="268139783"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1008186412"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -528,7 +508,6 @@
 										<int key="NSvFlags">301</int>
 										<string key="NSFrame">{{12, 48}, {182, 25}}</string>
 										<reference key="NSSuperview" ref="268139783"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="332870434"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -552,7 +531,6 @@
 										<int key="NSvFlags">301</int>
 										<string key="NSFrame">{{14, 131}, {182, 25}}</string>
 										<reference key="NSSuperview" ref="268139783"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="825796797"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -574,7 +552,6 @@
 								</array>
 								<string key="NSFrame">{{20, 52}, {280, 265}}</string>
 								<reference key="NSSuperview" ref="1020278876"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1056791937"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -584,7 +561,6 @@
 						</array>
 						<string key="NSFrame">{{0, 35}, {320, 425}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="174197417"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -614,7 +590,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="859747706"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -1052,197 +1027,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">63</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DiamondDesultDetailsVC</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="btnBackClicked:">id</string>
-						<string key="btnCancelClicked:">id</string>
-						<string key="btnCertClicked:">id</string>
-						<string key="btnEmailClicked:">id</string>
-						<string key="btnImageClicked:">id</string>
-						<string key="btnNotifySellerClicked:">id</string>
-						<string key="btnOkClicked:">id</string>
-						<string key="btnSmsClicked:">id</string>
-						<string key="btnTelClicked:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="btnBackClicked:">
-							<string key="name">btnBackClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnCancelClicked:">
-							<string key="name">btnCancelClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnCertClicked:">
-							<string key="name">btnCertClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnEmailClicked:">
-							<string key="name">btnEmailClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnImageClicked:">
-							<string key="name">btnImageClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnNotifySellerClicked:">
-							<string key="name">btnNotifySellerClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnOkClicked:">
-							<string key="name">btnOkClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnSmsClicked:">
-							<string key="name">btnSmsClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnTelClicked:">
-							<string key="name">btnTelClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="btnBack">UIButton</string>
-						<string key="btnCancel">UIButton</string>
-						<string key="btnCert">UIButton</string>
-						<string key="btnEmail">UIButton</string>
-						<string key="btnImage">UIButton</string>
-						<string key="btnNotifySeller">UIButton</string>
-						<string key="btnOk">UIButton</string>
-						<string key="btnSms">UIButton</string>
-						<string key="btnTel">UIButton</string>
-						<string key="cell">DiamondResultDetailCell</string>
-						<string key="cellActions">DiamondResultDetailsActions</string>
-						<string key="lblMainTitle">UILabel</string>
-						<string key="lblTitle">UILabel</string>
-						<string key="lblValue">UILabel</string>
-						<string key="resultCell">DiamondResultDetailCell</string>
-						<string key="resultCellActions">DiamondResultDetailsActions</string>
-						<string key="svNotifySellerContent">UIScrollView</string>
-						<string key="tblDiamond">UITableView</string>
-						<string key="txtMessage">UITextView</string>
-						<string key="txtReference">UITextView</string>
-						<string key="txtSubject">UITextField</string>
-						<string key="vNotifySeller">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="btnBack">
-							<string key="name">btnBack</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnCancel">
-							<string key="name">btnCancel</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnCert">
-							<string key="name">btnCert</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnEmail">
-							<string key="name">btnEmail</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnImage">
-							<string key="name">btnImage</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnNotifySeller">
-							<string key="name">btnNotifySeller</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnOk">
-							<string key="name">btnOk</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnSms">
-							<string key="name">btnSms</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnTel">
-							<string key="name">btnTel</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cell">
-							<string key="name">cell</string>
-							<string key="candidateClassName">DiamondResultDetailCell</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cellActions">
-							<string key="name">cellActions</string>
-							<string key="candidateClassName">DiamondResultDetailsActions</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblMainTitle">
-							<string key="name">lblMainTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblTitle">
-							<string key="name">lblTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblValue">
-							<string key="name">lblValue</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="resultCell">
-							<string key="name">resultCell</string>
-							<string key="candidateClassName">DiamondResultDetailCell</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="resultCellActions">
-							<string key="name">resultCellActions</string>
-							<string key="candidateClassName">DiamondResultDetailsActions</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="svNotifySellerContent">
-							<string key="name">svNotifySellerContent</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tblDiamond">
-							<string key="name">tblDiamond</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="txtMessage">
-							<string key="name">txtMessage</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="txtReference">
-							<string key="name">txtReference</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="txtSubject">
-							<string key="name">txtSubject</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="vNotifySeller">
-							<string key="name">vNotifySeller</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiamondDesultDetailsVC.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiamondResultDetailCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiamondResultDetailCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiamondResultDetailsActions</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiamondResultDetailsActions.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -1250,7 +1035,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="backButt.png">{44, 24}</string>
 			<string key="border320X50.png">{320, 50}</string>
-			<string key="button.png">{61, 33}</string>
+			<string key="button.png">{149, 31}</string>
 			<string key="button1.png">{61, 33}</string>
 			<string key="sqr.png">{320, 370}</string>
 			<string key="topBar.png">{320, 37}</string>
