--- a/NewsModule/Classes/NewsViewController.xib
+++ b/NewsModule/Classes/NewsViewController.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12D78</string>
+		<string key="IBDocument.SystemVersion">12E55</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.37</string>
+		<string key="IBDocument.AppKitVersion">1187.39</string>
 		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1232,7 +1232,7 @@
 				<string>{20, 35}</string>
 				<string>{27, 24}</string>
 				<string>{53, 45}</string>
-				<string>{320, 37}</string>
+				<string>{320, 26}</string>
 				<string>{51, 35}</string>
 			</object>
 		</object>
